--- a/package.json
+++ b/package.json
@@ -3,13 +3,25 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "nodemon --inspect src/app.js",
         "watch": "node-sass --watch src/resources/scss/ --output src/public/client/css/",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "nodemon --inspect ./src/app.js localhost 3000",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "clean": "rm -rf build && mkdir build",
+        "build-babel": "babel ./src -d ./build/src",
+        "build": "npm run clean && npm run build-babel",
+        "production": "npm run build && node ./build/src/app.js",
+        "dev": "nodemon --exec ./node_modules/.bin/babel-node --inspect ./src/app.js"
     },
     "dependencies": {
+        "@babel/cli": "^7.18.6",
+        "@babel/core": "^7.18.6",
+        "@babel/node": "^7.18.6",
+        "@babel/plugin-transform-runtime": "^7.18.6",
+        "@babel/preset-env": "^7.18.6",
+        "@babel/runtime": "^7.18.6",
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
+        "dotenv": "^11.0.0",
         "express": "~4.16.1",
         "express-handlebars": "^6.0.2",
         "faker": "^5.5.3",
